<resources>
    <string name="app_name">MoneyMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_setting">General Setting</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="save_budget">Save Budget</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="enable_expense_reminder">Enable Daily Expense Reminder</string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>JPY</item>
        <item>AUD</item>
        <item>CAD</item>
    </string-array>
</resources>